--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <a href="index.html" class="text-white hover:bg-gray-400 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Home</a>
 <a href="#about" class="text-white hover:bg-gray-400 hover:text-white px-3 py-2 rounded-md text-sm font-medium">About us</a>
 <a href="#service" class="text-white hover:bg-gray-400 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Services</a>
-<a href="#" class="text-white hover:bg-gray-400 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Sculptures</a>
-<a href="#" class="text-white hover:bg-gray-400 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Photography</a>
+<a href="sculpture.html" class="text-white hover:bg-gray-400 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Sculptures</a>
+<a href="photography.html" class="text-white hover:bg-gray-400 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Photography</a>
 
     </div>
   </div>
